platform-charts/scalability/templates/function-http-routes/admin-aa-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aa
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: e-cilium-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - "aa.192.168.100.250.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: keda-add-ons-http-interceptor-proxy
          port: 8080
          weight: 1
