platform-charts/scalability/templates/function-http-routes/admin-addition-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: addition
  annotations:
    caplatform.dpdns.org/public: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: e-cilium-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - "addition.192.168.100.250.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: retry-proxy
          port: 80
          weight: 1
