platform-charts/scalability/templates/function-http-routes/admin-test-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lambdastest-cilium-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - "test.192.168.100.253.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: retry-proxy
          port: 80
          weight: 1
