platform-charts/scalability/templates/function-http-routes/admin-tst-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tst
spec:
  parentRefs:
    - name: e-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "tst.192.168.100.250.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          port: 8080
